<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/background"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5sp"
    card_view:cardElevation="5sp"
    card_view:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/webTitle"
                style="@style/newsTitle"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/categorie"
                style="@style/newscategorie"
                tools:text="@string/categoriename" />

            <TextView
                android:id="@+id/author"
                style="@style/authorstyle"
                tools:text="@string/author" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                style="@style/datestyle"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/time"
                style="@style/datestyle"
                tools:text="@string/time" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>